lab-1/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: infra-backend-v1
spec:
  selector:
    app: infra-backend-v1
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: infra-backend-v2
spec:
  selector:
    app: infra-backend-v2
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 3000
